fix start section mobile screen header size

--- a/css/styles.css
+++ b/css/styles.css
@@ -1283,6 +1283,8 @@ img {
     padding-right: 100px;
   }
   .start__header {
+    font-size: 30px;
+    line-height: 28px;
     text-align: center;
     margin-right: 0;
     margin-bottom: 24px;
