--- a/scss/blocks/_start.scss
+++ b/scss/blocks/_start.scss
@@ -42,6 +42,8 @@
     padding-right: 100px;
   }
   .start__header {
+    font-size: 30px;
+    line-height: 28px;
     text-align: center;
     margin-right: 0;
     margin-bottom: 24px;
